src/app/app.component.scss
@import '../assets/styles/social-icons.scss';
@import '../assets//styles//colors.scss';
@import '../assets/styles/common.scss';

.container {
    background-color: $black;
    color: $periwinkle;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 100%;
    flex-direction: column;
    p {
        font-family: 'Josefin Sans', sans-serif;
        font-size: 48px;
        margin: 0;
        user-select: none;
    }
    a{
        font-size: 16px;
        margin-bottom: 8px;
    }
    @include colorLink($periwinkle, $cosmos);
    span {
        @include instagram-icon(12px);
    }
}

